Fixing CSS overflow for single campus

--- a/uniapp/src/App.css
+++ b/uniapp/src/App.css
@@ -308,6 +308,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 98vh; /* Adjust the height as needed */
+  overflow-x: auto;
 }
 
 .details-campus {
